--- a/vue/tsconfig.json
+++ b/vue/tsconfig.json
@@ -11,8 +11,7 @@
     },
     "resolveJsonModule": true,
     "types": [
-      "vite/client",
-      "unplugin-vue-router/client"
+      "vite/client"
     ],
     "allowJs": true,
     "strict": true,
@@ -28,5 +27,5 @@
     "src/**/*.vue"
   ],
   "exclude": ["dist", "node_modules", "cypress"],
-  "references": [{ "path": "./tsconfig.node.json" }],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
