--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - "80:80"
     depends_on:
       - gin
+    networks:
+      - app-network
 
   gin:
     container_name: gin
@@ -19,26 +21,46 @@ services:
     ports:
       - "8080:8080"
     depends_on:
+      mongo:
+        condition: service_healthy
       redis:
         condition: service_started
     environment:
       - MONGO_URI=mongodb://mongo:27017
       - REDIS_ADDR=redis:6379
+    networks:
+      - app-network
 
   mongo:
-    image: mongo
+    image: mongo:7
     container_name: mongo
     hostname: mongo
     ports:
       - "27017:27017"
     restart: always
+    networks:
+      - app-network
     healthcheck:
-      disable: true
-
+      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 30s
 
   redis:
-    image: redis
+    image: redis:7-alpine
     container_name: redis
     ports:
       - "6379:6379"
     restart: always
+    networks:
+      - app-network
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
+networks:
+  app-network:
+    driver: bridge
