--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   vue:
     container_name: vue
@@ -7,7 +5,7 @@ services:
       context: ./vue
       dockerfile: Dockerfile
     ports:
-      - "80:80"
+      - "3000:80"
     depends_on:
       - gin
     networks:
@@ -28,6 +26,9 @@ services:
     environment:
       - MONGO_URI=mongodb://mongo:27017
       - REDIS_ADDR=redis:6379
+      - JWT_SECRET=secret
+    volumes:
+      - ./gin/assets:/app/assets
     networks:
       - app-network
 
