--- a/vue/nginx.conf
+++ b/vue/nginx.conf
@@ -21,7 +21,16 @@ http {
 
         # API proxy to backend
         location /api/ {
-            proxy_pass http://gin:8080/;
+            proxy_pass http://gin:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Assets proxy to backend (only for images)
+        location /assets/images/ {
+            proxy_pass http://gin:8080;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
